<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_menu_select_all"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/menu_select_all"/>
    <item
        android:id="@+id/menu_select_none"
        android:icon="@drawable/ic_menu_select_none"
        android:orderInCategory="11"
        android:showAsAction="ifRoom"
        android:title="@string/menu_select_none"/>
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="20"
        android:showAsAction="always"
        android:title="@string/menu_filter"/>

</menu>